--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "ip": "^1.1.5",
+    "nedb": "^1.8.0",
+    "uuid": "^7.0.3",
     "uuidv4": "^6.0.7"
   },
   "devDependencies": {
